--- a/index.html
+++ b/index.html
@@ -6,24 +6,30 @@
     <title>Document</title>
  </head>
  <body>
- <header>
+<header> 
  <nav>
- <a href="">Web Studio</a>
+<section> 
+    
+ <a href="WebStudio">WebStudio</a>
  <ul>
      <li><a href="">Studio</a></li>
      <li><a href="">Portfolio</a></li>
      <li><a href="">Contacts</a></li>
  </ul>
+ </section>
  </nav>
+ <section> 
  <address>
-     <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-     <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
- </address>
+    <ul>
+     <li><a href="tel:+11(000)1111111">+11(000)1111111</a></li>
+     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    </ul>
+    </address>
      <h1>Effective Solutions for Your Business</h1>
      <button type="button">Order Service</button>
- </header>
- <main>
-<footer>
+</section>
+    </header>
+<main> 
    <section>
          <h2>Strategy</h2>
          <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -67,11 +73,12 @@
             </li>
          </ul>
     </section>
-   <section>
+   <footer> 
+    <section>
     <h2>WebStudio</h2>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </section>
-</footer>
- </main>
+ </footer>
+</main>
 </body>
 </html>
