--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
  </head>
  <body>
 <header> 
- <nav>
-<section> 
+  <nav>
+ <section> 
     
  <a href="WebStudio">WebStudio</a>
  <ul>
@@ -73,12 +73,13 @@
             </li>
          </ul>
     </section>
+    </main>
+
    <footer> 
     <section>
-    <h2>WebStudio</h2>
+    <a href="./index.html">WebStudio</a> 
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </section>
  </footer>
-</main>
 </body>
 </html>
