--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Document</title>
  </head>
  <body>
-<header> 
-  <nav>
- <section> 
-    
- <a href="WebStudio">WebStudio</a>
- <ul>
+     <header> 
+     <nav>
+  <section>
+  <a href="WebStudio">WebStudio</a>
+<ul>
      <li><a href="">Studio</a></li>
      <li><a href="">Portfolio</a></li>
      <li><a href="">Contacts</a></li>
@@ -49,25 +48,26 @@
          <h2>Technologies</h2>
          <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
      </section>
+
      <section>
          <h2>Our Team</h2>
          <ul>
-            <li><img src="./images/img-2.jpg" alt="" width="264" height="260">
+            <li><img src="./images/img-2.jpg" alt="Mark Guerrero" width="264" height="260">
                  <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
 
-            <li><img src="./images/img-5.jpg" alt="" width="264" height="260">
+            <li><img src="./images/img-5.jpg" alt="Tom Ford" width="264" height="260">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
 
-            <li><img src="./images/img-3.jpg" alt="" width="264" height="260">
+            <li><img src="./images/img-3.jpg" alt="Camila Garcia" width="264" height="260">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
 
-            <li><img src="./images/img-4.jpg" alt="" width="264" height="260">
+            <li><img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" height="260">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
