--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
  <body>
      <header> 
      <nav>
-  <a href="WebStudio">WebStudio</a>
+  <section>
+  <a href="/index.html”">WebStudio</a>
  <ul>
      <li><a href="">Studio</a></li>
      <li><a href="">Portfolio</a></li>
      <li><a href="">Contacts</a></li>
  </ul>
+ </section>
  </nav>
  <section> 
  <address>
