--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <header> 
      <nav>
   <section>
-  <a href="./index.html”">WebStudio</a>
+  <a href="./index.html">WebStudio</a>
  <ul>
      <li><a href="">Studio</a></li>
      <li><a href="">Portfolio</a></li>
@@ -21,7 +21,7 @@
  <address>
     <ul>
      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-     <li><a href="tel:+11(000)1111111">+11(000)111-11-11</a></li>
+     <li><a href="tel:+11(000)1111111">+11(000)-111-11-11</a></li>
     </ul>
     </address>
      <h1>Effective Solutions for Your Business</h1>
