--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
  <body>
      <header> 
      <nav>
-  <section>
-  <a href="./index.html">WebStudio</a>
- <ul>
-     <li><a href="">Studio</a></li>
-     <li><a href="">Portfolio</a></li>
-     <li><a href="">Contacts</a></li>
+     <a href="./index.html">WebStudio</a>
+     <ul>
+     <li><a href="./index.html">Studio</a></li>
+     <li><a href="./index.html">Portfolio</a></li>
+     <li><a href="./index.html">Contacts</a></li>
  </ul>
- </section>
  </nav>
- <section> 
  <address>
     <ul>
      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
@@ -26,11 +23,10 @@
     </address>
      <h1>Effective Solutions for Your Business</h1>
      <button type="button">Order Service</button>
-</section>
     </header>
 <main> 
    <section>
-         <h2>Strategy</h2>
+         <h1>Strategy</h1>
          <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
    </section>
 
